; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/replication/extr_syncrep.c_assign_synchronous_commit.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/replication/extr_syncrep.c_assign_synchronous_commit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SYNC_REP_WAIT_WRITE = common dso_local global i32 0, align 4
@SyncRepWaitMode = common dso_local global i32 0, align 4
@SYNC_REP_WAIT_FLUSH = common dso_local global i32 0, align 4
@SYNC_REP_WAIT_APPLY = common dso_local global i32 0, align 4
@SYNC_REP_NO_WAIT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @assign_synchronous_commit(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %5 = load i32, i32* %3, align 4
  switch i32 %5, label %12 [
    i32 128, label %6
    i32 129, label %8
    i32 130, label %10
  ]

6:                                                ; preds = %2
  %7 = load i32, i32* @SYNC_REP_WAIT_WRITE, align 4
  store i32 %7, i32* @SyncRepWaitMode, align 4
  br label %14

8:                                                ; preds = %2
  %9 = load i32, i32* @SYNC_REP_WAIT_FLUSH, align 4
  store i32 %9, i32* @SyncRepWaitMode, align 4
  br label %14

10:                                               ; preds = %2
  %11 = load i32, i32* @SYNC_REP_WAIT_APPLY, align 4
  store i32 %11, i32* @SyncRepWaitMode, align 4
  br label %14

12:                                               ; preds = %2
  %13 = load i32, i32* @SYNC_REP_NO_WAIT, align 4
  store i32 %13, i32* @SyncRepWaitMode, align 4
  br label %14

14:                                               ; preds = %12, %10, %8, %6
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
